// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AnswerTypeSelector should render content when open 1`] = `
<Popout
  onEntered={[Function]}
  onToggleOpen={[Function]}
  open={true}
  transition={[Function]}
  trigger={
    <Button
      data-test="btn-add-answer"
      small={true}
      type="button"
      variant="tertiary"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Add 
        an
         answer
      </IconText>
    </Button>
  }
>
  <AnswerTypeGrid
    onSelect={[Function]}
  />
</Popout>
`;

exports[`components/AnswerTypeSelector should say to add 'another' answer if > 0 answers currently 1`] = `
<Popout
  onEntered={[Function]}
  onToggleOpen={[Function]}
  open={false}
  transition={[Function]}
  trigger={
    <Button
      data-test="btn-add-answer"
      small={true}
      type="button"
      variant="tertiary"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Add 
        another
         answer
      </IconText>
    </Button>
  }
>
  <AnswerTypeGrid
    onSelect={[Function]}
  />
</Popout>
`;

exports[`components/AnswerTypeSelector shouldn't render content when closed 1`] = `
<Popout
  onEntered={[Function]}
  onToggleOpen={[Function]}
  open={false}
  transition={[Function]}
  trigger={
    <Button
      data-test="btn-add-answer"
      small={true}
      type="button"
      variant="tertiary"
    >
      <IconText
        hideText={false}
        icon={[Function]}
      >
        Add 
        an
         answer
      </IconText>
    </Button>
  }
>
  <AnswerTypeGrid
    onSelect={[Function]}
  />
</Popout>
`;
